--- a/app/views/usersRatingPage.scala.html
+++ b/app/views/usersRatingPage.scala.html
@@ -150,14 +150,16 @@
                 </td>
             </tr>
         </table>
+
+        @win.map { item =>
+
         <table>
 
 
 
 
-        @win.map { item =>
 
-                <tr>
+
         <div class="col-md-8 products">
 
             <div class="row">
@@ -165,33 +167,36 @@
                 <div class="col-sm-4">
 
                     <div class="product">
-                        <table>
-
-                        <div class="product-img">
-                            <tr>
-
-                            <a href="#"><img src="/assets/images/Casa Del Coppiere Vino Da Tavola.png" alt=""></a>
-                            </tr>
-                        </div>
-                            < <tr colspan="2">
-
-                            @item.getWine(item.getId_product)
-
-                            @item.getRating
 
 
-                        @if(isAdmin) {
+                        @*<div class="product-img">*@
+                            @*<tr>*@
 
-                                @*<li><a href="#win4" class="button button-green">Редактировать</a></li>*@
-                                <a href="@routes.WineController.renderUpdateWineInfo(item.getId_product, login)">
-                                    Изменить</a>
-                                <a href="@routes.WineController.deleteWine(item.getId_product, login)" >
-                                    Удалить </a>
-                            }
-                            <tr></tr>
-                            <p class="product-price">Price: €10.00
+                            @*<a href="#"><img src="/assets/images/Casa Del Coppiere Vino Da Tavola.png" alt=""></a>*@
+                            @*</tr>*@
+                        @*</div>*@
 
-                        </table>
+
+                            <p class="product-name">@item.getWine(item.getId_product)
+
+
+                            <p class="product-price">€10.00
+                    <div class="product-rating">
+                    <div class="rating">
+
+                        <input type="radio" id="star5" name="rating" value="5" /><label for="star5" title="Rocks!">5 stars</label>
+                        @if(item.getRating==4){
+                            <input type="radio" id="star4" name="rating" value="4" checked /><label for="star4" title="Pretty good">4 stars</label>
+                        }
+
+                        <input type="radio" id="star3" name="rating" value="3" /><label for="star3" title="Meh">3 stars</label>
+                        <input type="radio" id="star2" name="rating" value="2" /><label for="star2" title="Kinda bad">2 stars</label>
+                        <input type="radio" id="star1" name="rating" value="1" /><label for="star1" title="Sucks big time">1 star</label>
+                    </div>
+                    </div>
+
+
+
                     </div>
 
 
