--- a/public/stylesheets/fontXml.css
+++ b/public/stylesheets/fontXml.css
@@ -215,11 +215,93 @@ img {
     overflow: hidden;
 }
 .product-price {
-    bottom: 15px;
-    left: 0;
+     bottom: 15px;
+     left: -70px;
+
+
+     position: absolute;
+     width: 100%;
+     color: #d51e08;
+     font-size: 18px;
+     font-weight: 500;
+ }
+.product-name {
+    bottom: 60px;
+    left: 0px;
     position: absolute;
     width: 100%;
-    color: #d51e08;
-    font-size: 18px;
+    color: #171fd5;
+    font-size: 20px;
     font-weight: 500;
+}
+.product-rating {
+    bottom: 16px;
+    left: 60px;
+    position: absolute;
+    width: 100%;
+    color: #171fd5;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.rating {
+    float:left;
+}
+
+/* :not(:checked) is a filter, so that browsers that don’t support :checked don’t
+   follow these rules. Every browser that supports :checked also supports :not(), so
+   it doesn’t make the test unnecessarily selective */
+.rating:not(:checked) > input {
+    position:absolute;
+    top:-9999px;
+    clip:rect(0,0,0,0);
+}
+
+.rating:not(:checked) > label {
+    float:right;
+    width:1em;
+    padding:0 .1em;
+    overflow:hidden;
+    white-space:nowrap;
+    cursor:pointer;
+    font-size:200%;
+    line-height:1.2;
+    color:#ddd;
+    text-shadow:1px 1px #bbb, 2px 2px #666, .1em .1em .2em rgba(0,0,0,.5);
+}
+
+.rating:not(:checked) > label:before {
+    content: '★ ';
+}
+
+.rating > input:checked ~ label {
+    color: #f70;
+    text-shadow:1px 1px #c60, 2px 2px #940, .1em .1em .2em rgba(0,0,0,.5);
+}
+
+.rating:not(:checked) > label:hover,
+.rating:not(:checked) > label:hover ~ label {
+    color: gold;
+    text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
+}
+
+.rating > input:checked + label:hover,
+.rating > input:checked + label:hover ~ label,
+.rating > input:checked ~ label:hover,
+.rating > input:checked ~ label:hover ~ label,
+.rating > label:hover ~ input:checked ~ label {
+    color: #ea0;
+    text-shadow:1px 1px goldenrod, 2px 2px #B57340, .1em .1em .2em rgba(0,0,0,.5);
+}
+
+.rating > label:active {
+    position:relative;
+    top:2px;
+    left:2px;
+}
+
+@media only screen and (min-width: 450px) {
+    .col-md-8 products {
+        width: 50%;
+    }
 }
