--- a/app/views/contactPage.scala.html
+++ b/app/views/contactPage.scala.html
@@ -43,7 +43,7 @@
                     </div>
 
 
-                    <a href="@routes.UsersController.renderAddUserForm(false)" class="slick-login2">Регистрация</a>
+                    <a href="@routes.UsersController.renderAddUserForm(false,0)" class="slick-login2">Регистрация</a>
 
                 }
             <a class="close"title="Закрыть" href="#close"></a>
