--- a/app/views/createUser.scala.html
+++ b/app/views/createUser.scala.html
@@ -1,23 +1,60 @@
-@(form: play.data.Form[User],admin:Boolean)
+@(form: play.data.Form[User],admin:Boolean, error:Integer,login:String)
 <html>
     <head>
         <title>
             Добавление нового пользователя
         </title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/style.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
+        <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
+
+
+        @*<script src="@routes.Assets.versioned("javascripts/window.js")" type="text/javascript"></script>*@
+        <script src="@routes.Assets.versioned("javascripts/jquery-2.2.0.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
     </head>
     <body>
-        <a href="@routes.mainPageController.projectPage("",admin)" class = "link">На главную страницу </a>
+        <a href="@routes.UsersController.usersList(login)" class = "link">Назад </a>
         <h1 class="g1">Регистрация</h1>
 
         @helper.form(action = routes.UsersController.addingUser(admin), 'id -> "slick-login"){
-            @helper.inputText(form("login"),'_showConstraints ->false,'placeholder -> "Логин")
-            @helper.inputText(form("password"),'_showConstraints ->false,'placeholder -> "Ваш сложный пароль")
+            @helper.inputText(form("login"),'_showConstraints ->false,'placeholder -> "Логин",'required -> "required")
+            @helper.inputText(form("password"),'_showConstraints ->false,'placeholder -> "Ваш сложный пароль",'required -> "required")
             @if(admin){
                 Права администратора:@helper.checkbox(form("isAdmin"))
             }
 
             <input type ="submit" value="Создать">
             }
+        @if(error == 1 || error ==2) {
+                <!-- Модальное окно при загрузке -->
+
+            <div class="container">
+                    <!-- Modal -->
+                <div class="modal fade" id="myModal" role="dialog">
+                    <div class="modal-dialog">
+
+                            <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal"></button>
+                                <h4 class="modal-title">Ошибка! </h4>
+                            </div>
+                            <div class="modal-body">
+                                <h4> Такой логин уже существует!</h4>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+            <script>
+                    $(document).ready(function () {
+                        $('#myModal').modal('show');
+                    });
+            </script>
+        }
     </body>
 </html>
