--- a/app/views/users.scala.html
+++ b/app/views/users.scala.html
@@ -7,7 +7,16 @@
     </head>
     <body>
         <div align="center">
+            @if(!(login.isEmpty)){
+                <div align="right">
+
+                    Вы вошли как :@login
+
+                    <br>
+                </div>
+            }
             <h2>Barton & Guestier</h2>
+
 
             <p></p>
             <ul class="menu" >
@@ -28,7 +37,7 @@
                     <li><a href="@routes.WineController.catalogPage(login,true)">Каталог </a></li>
                     <li><a href="@routes.mainPageController.projectPage(login,true)">О проекте </a></li>
                     <li><a href="@routes.UsersController.usersList(login)">Список пользователей </a></li>
-                    <li><a href="@routes.UsersController.renderAddUserForm(true)">Добавить пользователя </a></li>
+                    <li><a href="@routes.UsersController.renderAddUserForm(true,0)">Добавить пользователя </a></li>
             </ul>
             <p></p>
             <p></p>
