--- a/app/views/usersRatingPage.scala.html
+++ b/app/views/usersRatingPage.scala.html
@@ -184,14 +184,52 @@
                     <div class="product-rating">
                     <div class="rating">
 
-                        <input type="radio" id="star5" name="rating" value="5" /><label for="star5" title="Rocks!">5 stars</label>
-                        @if(item.getRating==4){
-                            <input type="radio" id="star4" name="rating" value="4" checked /><label for="star4" title="Pretty good">4 stars</label>
+                        @if(item.getRating==5){
+                            <input type="radio" id="star5" name=@item.getId_product value="5"  checked disabled /><label for="star5" title="Rocks!">5 stars</label>
+                            <input type="radio" id="star4" name=@item.getId_product value="4" disabled /><label for="star4" title="Pretty good">4 stars</label>
+                            <input type="radio" id="star3" name=@item.getId_product value="3" disabled/><label for="star3" title="Meh">3 stars</label>
+                            <input type="radio" id="star2" name=@item.getId_product value="2" disabled /><label for="star2" title="Kinda bad">2 stars</label>
+                            <input type="radio" id="star1" name=@item.getId_product value="1" disabled/><label for="star1" title="Sucks big time">1 star</label>
+
                         }
 
-                        <input type="radio" id="star3" name="rating" value="3" /><label for="star3" title="Meh">3 stars</label>
-                        <input type="radio" id="star2" name="rating" value="2" /><label for="star2" title="Kinda bad">2 stars</label>
-                        <input type="radio" id="star1" name="rating" value="1" /><label for="star1" title="Sucks big time">1 star</label>
+
+                        @if(item.getRating==4){
+                            <input type="radio" id="star5" name=@item.getId_product value="5"  class="veryGrey" disabled /><label for="star5" title="Rocks!">5 stars</label>
+                            <input type="radio" id="star4" name=@item.getId_product value="4" checked disabled /><label for="star4" title="Pretty good">4 stars</label>
+                            <input type="radio" id="star3" name=@item.getId_product value="3" disabled/><label for="star3" title="Meh">3 stars</label>
+                            <input type="radio" id="star2" name=@item.getId_product value="2" disabled /><label for="star2" title="Kinda bad">2 stars</label>
+                            <input type="radio" id="star1" name=@item.getId_product value="1" disabled/><label for="star1" title="Sucks big time">1 star</label>
+
+                        }
+
+                        @if(item.getRating==3){
+                            <input type="radio" id="star5" name=@item.getId_product value="5"  class="veryGrey" disabled /><label for="star5" title="Rocks!">5 stars</label>
+                            <input type="radio" id="star4" name=@item.getId_product value="4" class="veryGrey" disabled /><label for="star4" title="Pretty good">4 stars</label>
+                            <input type="radio" id="star3" name=@item.getId_product value="3" checked disabled/><label for="star3" title="Meh">3 stars</label>
+                            <input type="radio" id="star2" name=@item.getId_product value="2" disabled /><label for="star2" title="Kinda bad">2 stars</label>
+                            <input type="radio" id="star1" name=@item.getId_product value="1" disabled/><label for="star1" title="Sucks big time">1 star</label>
+
+                        }
+
+                        @if(item.getRating==2){
+                            <input type="radio" id="star5" name=@item.getId_product value="5"  class="veryGrey" disabled /><label for="star5" title="Rocks!">5 stars</label>
+                            <input type="radio" id="star4" name=@item.getId_product value="4" class="veryGrey" disabled /><label for="star4" title="Pretty good">4 stars</label>
+                            <input type="radio" id="star3" name=@item.getId_product value="3"  class="veryGrey" disabled/><label for="star3" title="Meh">3 stars</label>
+                            <input type="radio" id="star2" name=@item.getId_product value="2" checked disabled /><label for="star2" title="Kinda bad">2 stars</label>
+                            <input type="radio" id="star1" name=@item.getId_product value="1" disabled/><label for="star1" title="Sucks big time">1 star</label>
+
+                        }
+                        @if(item.getRating==1){
+                            <input type="radio" id="star5" name=@item.getId_product value="5"  class="veryGrey" disabled /><label for="star5" title="Rocks!">5 stars</label>
+                            <input type="radio" id="star4" name=@item.getId_product value="4" class="veryGrey" disabled /><label for="star4" title="Pretty good">4 stars</label>
+                            <input type="radio" id="star3" name=@item.getId_product value="3"  class="veryGrey" disabled/><label for="star3" title="Meh">3 stars</label>
+                            <input type="radio" id="star2" name=@item.getId_product value="2" class="veryGrey" disabled /><label for="star2" title="Kinda bad">2 stars</label>
+                            <input type="radio" id="star1" name=@item.getId_product value="1"  checked disabled/><label for="star1" title="Sucks big time">1 star</label>
+
+                        }
+
+
                     </div>
                     </div>
 
