--- a/app/views/basketPage.scala.html
+++ b/app/views/basketPage.scala.html
@@ -125,11 +125,12 @@
                         @if(sizeItems()!=0){
                         <table class="wine1">
                             <tr>
-                            @for(j <- 2 to sizeItems) {
+                            @for(j <- 1 to sizeItems) {
                                 <th>@colomn(j-1)</th>
                             }
                             </tr>
                             <tr colspan="2"> @win.map { item =>
+
                                 <th>@item.getId_product</th>
                                 <th>@item.getName</th>
                                 <th>@item.getColour</th>
@@ -142,7 +143,12 @@
                                 <th>@item.getValue</th>
                                 <th>@item.getDegree</th>
 
-                                <th> <a href="@routes.BasketController.deleteFromBasket(item.getId_product,login,isAdmin)" > Удалить </a></th>
+                                <th>
+                                    <button onclick="window.location.href='@routes.BasketController.deleteFromBasket(item.getId_product,login,isAdmin)'"
+                                    type="submit" class="btn btn-default btn-sm">
+                                        <span class="glyphicon glyphicon-trash"></span>
+                                    </button>
+                                </th>
 
 
                             @if(isAdmin) {
