--- a/app/views/catalogPage.scala.html
+++ b/app/views/catalogPage.scala.html
@@ -291,96 +291,182 @@
                 cod(i)
             }
 
-            <table class="wine">
-                <tr>
-                    <td>
+            @*<table class="wine">*@
+                @*<tr>*@
+
                         <table class="wine1">
-                            <tr>
-                            @for(j <- 2 to sizeItems) {
-                                <th>@colomn(j-1)</th>
-                            }
-                            </tr>
-                            <tr colspan="2"> @win.map { item =>
+                            @*<tr>*@
+                            @*for(j <- 2 to sizeItems) {*@
+                                @*<th>@colomn(j-1)</th>*@
+                            @*}*@
+                            @*</tr>*@
+                            @*<tr colspan="2">*@
+                            @*win.map { item =>*@
 
-                                <th>@item.getName</th>
-                                <th>@item.getColour</th>
-                                <th>@item.getCountry</th>
-                                <th>@item.getBrand</th>
-                                <th>@item.getShelf_life</th>
-                                <th>@item.getSugar</th>
-                                <th>@item.getGrape_sort</th>
-                                <th>@item.getPrice</th>
-                                <th>@item.getValue</th>
-                                <th>@item.getDegree</th>
-                                <th>
-                                @helper.form(action = routes.BasketController.addIn(login, isAdmin,item.getId_product)) {
-                                    <button type="submit" class="btn btn-default btn-sm">
-                                        <span class="glyphicon glyphicon-shopping-cart"></span>
-                                    </button>
-                                }
-                                </th>
+                                @*<th>@item.getName</th>*@
+                                @*<th>@item.getColour</th>*@
+                                @*<th>@item.getCountry</th>*@
+                                @*<th>@item.getBrand</th>*@
+                                @*<th>@item.getShelf_life</th>*@
+                                @*<th>@item.getSugar</th>*@
+                                @*<th>@item.getGrape_sort</th>*@
+                                @*<th>@item.getPrice</th>*@
+                                @*<th>@item.getValue</th>*@
+                                @*<th>@item.getDegree</th>*@
+                                @*<th>*@
+                                @*helper.form(action = routes.BasketController.addIn(login, isAdmin,item.getId_product)) {*@
+                                    @*<button type="submit" class="btn btn-default btn-sm">*@
+                                        @*<span class="glyphicon glyphicon-shopping-cart"></span>*@
+                                    @*</button>*@
+                                @*}*@
+                                @*</th>*@
 
-                            @if(isAdmin) {
-                                <th>
+                            @*if(isAdmin) {*@
+                                @*<th>*@
                                     @*<li><a href="#win4" class="button button-green">Изменить</a></li>*@
-                                    <a href="@routes.WineController.renderUpdateWineInfo(item.getId_product, login)">
-                                        Изменить</a>
-                                    <a href="@routes.WineController.deleteWine(item.getId_product, login)" >
-                                        Удалить </a></th>
-                            }
-                            <tr></tr>
-                            }
+                                    @*<a href="@routes.WineController.renderUpdateWineInfo(item.getId_product, login)">*@
+                                        @*Изменить</a>*@
+                                    @*<a href="@routes.WineController.deleteWine(item.getId_product, login)" >*@
+                                        @*Удалить </a></th>*@
+                            @*}*@
+                            @*<tr></tr>*@
+                            @*}*@
                 @*</tr>*@
-                        </table>
-                    </td>
-                    <td>
-                        <table class="wine2">
-                            <tr>Фильтр</tr>
-                            <tr> <!--форма поиска -->
-                                <div class="search">
-                            @helper.form(action = routes.WineController.searchCatalogPage(login, isAdmin)) {
-                                @helper.inputText(wineForm("name"), '_showConstraints -> false, 'placeholder -> "Введите название", '_label -> "")
-                                <tr>Цвет</tr>
-                                <div class="group">
-                                    Все цвета @helper.checkbox(searchform("anyColour"), '_label -> "")
-                                    Белое  @helper.checkbox(searchform("whiteColour"), '_label -> "")
-                                    Красное @helper.checkbox(searchform("redColour"), '_label -> "")
-                                    Розовое @helper.checkbox(searchform("pinkColour"), '_label -> "")</div>
-                                <script>
-                                        $(".group input").on("click", function () {
-                                            $(".group input").removeAttr("checked");
-                                            $(this).prop("checked", true);
-                                        })
-                                </script>
-
-                                <tr>Сахар</tr>
-                                <div class="group2">
-                                Любое содержание сахара @helper.checkbox(searchform("anySugar"), '_label -> "")
-                                Полусладкое @helper.checkbox(searchform("semisweet"), '_label -> "")
-                                Сухое @helper.checkbox(searchform("dry"), '_label -> "")
-                                Сладкое @helper.checkbox(searchform("sweet"), '_label -> "")
-                                Полусухое @helper.checkbox(searchform("semidry"), '_label -> "") </div>
-
-                                      <script>
-                                        $(".group2 input").on("click", function () {
-                                            $(".group2 input").removeAttr("checked");
-                                            $(this).prop("checked", true);
-                                        })
-                                      </script>
 
 
-        @helper.inputText(wineForm("country"), '_showConstraints -> false, 'placeholder -> "Страна", '_label -> "")
-        @helper.inputText(searchform("minprice"), '_showConstraints -> false, 'placeholder -> "Цена От ", '_label -> "")
-        @helper.inputText(searchform("maxprice"), '_showConstraints -> false, 'placeholder -> "Цена До", '_label -> "")
 
 
-        <button type="submit">Поиск</button>
-        }
+                               <td>
+                                <div class="col-md-8 products">
 
-        </div>
+                                    <div class="row">
+
+                                        <div class="col-sm-4">
 
 
-            <!--сортировка
+
+                                                <td>
+                                                @win.map {item =>
+
+
+
+                                            <div class="product">
+
+                                                <div class="product-img">
+
+                                                <a href="#"><img src="/assets/images/Casa Del Coppiere Vino Da Tavola.png" alt=""  height="800" ></a>
+                                                </div>
+                                                <div class="wineName">
+                                                <p>@item.getName</p>
+                                                </div>
+                                                <p>@item.getColour</p>
+                                                <p>@item.getCountry</p>
+                                                <p>@item.getBrand</p>
+                                                <p>@item.getShelf_life</p>
+                                               <p>@item.getSugar</p>
+                                                <p>@item.getGrape_sort</p>
+
+                                                <p>@item.getValue</p>
+                                                <p>@item.getDegree</p>
+
+
+
+                                            <p class="product-price">@item.getPrice
+
+                                            <p class="product-price1">@item.averageRatingOfTheProduct(item.getId_product)/5.0
+
+                                            <div class="product-rating">
+
+                                            <div class="rating">
+
+
+
+                                                    <input type="radio" id=@item.getId_product name=@item.getId_product value="5"  /><label for="star5" title="Rocks!"  >5 stars</label>
+                                                    <input type="radio" id='@item.getId_product+"star4" name=@item.getId_product value="4"  /><label for="star4" title="Pretty good">4 stars</label>
+                                                    <input type="radio" id=@item.getId_product+"star3" name=@item.getId_product value="3" /><label for="star3" title="Meh">3 stars</label>
+                                                    <input type="radio" id=@item.getId_product+"star2" name=@item.getId_product value="2"  /><label for="star2" title="Kinda bad">2 stars</label>
+                                                    <input type="radio" id=@item.getId_product+'star1' name=@item.getId_product value="1" /><label for="star1" title="Sucks big time">1 star</label>
+
+
+
+
+                                            </div>
+                                            </div>
+
+                                                <p>
+
+                                                @helper.form(action = routes.BasketController.addIn(login, isAdmin,item.getId_product)){
+
+
+                                                    <button type="submit" class="btn btn-default btn-sm" style="width:50px;height:50px">
+                                                        <span class="glyphicon glyphicon-shopping-cart" ></span>
+                                                    </button>
+
+                                                }
+
+                                                </p>
+
+
+
+                                            </div>
+
+                                                }
+
+
+                                                </td>
+
+                                        </div>
+                                    </div>
+
+                                </div>
+                             </td>
+                            <td>
+                                <table class="wine2">
+                                    <tr>Фильтр</tr>
+                                    <tr> <!--форма поиска -->
+                                        <div class="search">
+                                    @helper.form(action = routes.WineController.searchCatalogPage(login, isAdmin)) {
+                                        @helper.inputText(wineForm("name"), '_showConstraints -> false, 'placeholder -> "Введите название", '_label -> "")
+                                        <tr>Цвет</tr>
+                                        <div class="group">
+                                            Все цвета @helper.checkbox(searchform("anyColour"), '_label -> "")
+                                            Белое  @helper.checkbox(searchform("whiteColour"), '_label -> "")
+                                            Красное @helper.checkbox(searchform("redColour"), '_label -> "")
+                                            Розовое @helper.checkbox(searchform("pinkColour"), '_label -> "")</div>
+                                        <script>
+                                                $(".group input").on("click", function () {
+                                                    $(".group input").removeAttr("checked");
+                                                    $(this).prop("checked", true);
+                                                })
+                                        </script>
+
+                                        <tr>Сахар</tr>
+                                        <div class="group2">
+                                            Любое содержание сахара @helper.checkbox(searchform("anySugar"), '_label -> "")
+                                            Полусладкое @helper.checkbox(searchform("semisweet"), '_label -> "")
+                                            Сухое @helper.checkbox(searchform("dry"), '_label -> "")
+                                            Сладкое @helper.checkbox(searchform("sweet"), '_label -> "")
+                                            Полусухое @helper.checkbox(searchform("semidry"), '_label -> "") </div>
+
+                                        <script>
+                                                $(".group2 input").on("click", function () {
+                                                    $(".group2 input").removeAttr("checked");
+                                                    $(this).prop("checked", true);
+                                                })
+                                        </script>
+
+
+                                        @helper.inputText(wineForm("country"), '_showConstraints -> false, 'placeholder -> "Страна", '_label -> "")
+                                        @helper.inputText(searchform("minprice"), '_showConstraints -> false, 'placeholder -> "Цена От ", '_label -> "")
+                                        @helper.inputText(searchform("maxprice"), '_showConstraints -> false, 'placeholder -> "Цена До", '_label -> "")
+
+
+                                        <button type="submit">Поиск</button>
+                                    }
+                                    </div>
+
+
+                                        <!--сортировка
                          0- по цене по возрастанию
                          5 - по цене по убыванию
                          1 - по названию по возрастанию
@@ -390,53 +476,73 @@
                          4 - по крепости по убыванию-->
 
 
-        @helper.form(action = routes.WineController.sortCatalogPage(login, isAdmin, 0)) {
-            Cортировка по цене
-        <button type="submit" class="btn btn-default btn-sm">
-            <span class="glyphicon glyphicon-sort-by-attributes"></span>
-        </button>
-        }
-        @helper.form(action = routes.WineController.sortCatalogPage(login, isAdmin, 5)) {
+                                    @helper.form(action = routes.WineController.sortCatalogPage(login, isAdmin, 0)) {
+                                        Cортировка по цене
+                                    <button type="submit" class="btn btn-default btn-sm">
+                                        <span class="glyphicon glyphicon-sort-by-attributes"></span>
+                                    </button>
+                                    }
+                                    @helper.form(action = routes.WineController.sortCatalogPage(login, isAdmin, 5)) {
 
-            <button type="submit" class="btn btn-default btn-sm">
-                <span class="glyphicon glyphicon-sort-by-attributes-alt"></span>
-            </button>
-        }
-        <p></p>
-        @helper.form(action = routes.WineController.sortCatalogPage(login, isAdmin, 1)) {
-            Cортировка по названию
-            <button type="submit" class="btn btn-default btn-sm">
-                <span class="glyphicon glyphicon-sort-by-attributes"></span>
-            </button>
-        }
-        @helper.form(action = routes.WineController.sortCatalogPage(login, isAdmin, 2)) {
+                                        <button type="submit" class="btn btn-default btn-sm">
+                                            <span class="glyphicon glyphicon-sort-by-attributes-alt"></span>
+                                        </button>
+                                    }
+                                    <p></p>
+                                    @helper.form(action = routes.WineController.sortCatalogPage(login, isAdmin, 1)) {
+                                        Cортировка по названию
+                                        <button type="submit" class="btn btn-default btn-sm">
+                                            <span class="glyphicon glyphicon-sort-by-attributes"></span>
+                                        </button>
+                                    }
+                                    @helper.form(action = routes.WineController.sortCatalogPage(login, isAdmin, 2)) {
 
-            <button type="submit" class="btn btn-default btn-sm">
-                <span class="glyphicon glyphicon-sort-by-attributes-alt"></span>
-            </button>
-        }
-        <p></p>
+                                        <button type="submit" class="btn btn-default btn-sm">
+                                            <span class="glyphicon glyphicon-sort-by-attributes-alt"></span>
+                                        </button>
+                                    }
+                                    <p></p>
 
-        @helper.form(action = routes.WineController.sortCatalogPage(login, isAdmin, 3)) {
-            Сортировка по крепости
-            <button type="submit" class="btn btn-default btn-sm">
-                <span class="glyphicon glyphicon-sort-by-attributes"></span>
-            </button>
-        }
-        @helper.form(action = routes.WineController.sortCatalogPage(login, isAdmin, 4)) {
+                                    @helper.form(action = routes.WineController.sortCatalogPage(login, isAdmin, 3)) {
+                                        Сортировка по крепости
+                                        <button type="submit" class="btn btn-default btn-sm">
+                                            <span class="glyphicon glyphicon-sort-by-attributes"></span>
+                                        </button>
+                                    }
+                                    @helper.form(action = routes.WineController.sortCatalogPage(login, isAdmin, 4)) {
 
-            <button type="submit" class="btn btn-default btn-sm">
-                <span class="glyphicon glyphicon-sort-by-attributes-alt"></span>
-            </button>
-        }
-        </tr>
-        @*<tr colspan="2"></tr>*@
+                                        <button type="submit" class="btn btn-default btn-sm">
+                                            <span class="glyphicon glyphicon-sort-by-attributes-alt"></span>
+                                        </button>
+                                    }
+                                    @*<tr colspan="2"></tr>*@
+                                </table>
+
+
+
+
+
+                            </td>
+
+
+
+
+
         </table>
-        </td>
-        </tr>
-            </table>
-            <br>
-            <p></p>
+
+
+
+
+
+
+
+
+
+                    @*</td>*@
+                @*</tr>*@
+            @*</table>*@
+            @*<br>*@
+            @*<p></p>*@
         </div>
     </body>
 
