--- a/app/views/contactPage.scala.html
+++ b/app/views/contactPage.scala.html
@@ -153,13 +153,14 @@
                 }
 
             </ul>
-            <table class="start">
-                <tr>
-                    <th>Страница находится в разработке</th>
-                </tr>
-                <tr>
-                    <th>Но писать можно сюда - DonMins@@yandex.ru</th>
-                </tr>
+            <table class="wine">
+                <p>Номер телефона - 555-55-55</p>
+                <p>E-mail - DonMins@@yandex.ru</p>
+                <p>Адрес - г.Самара, ул. Любительская, д. 13, 1 этаж</p>
+                <p>Часы работы - Пн.-Пт.: 9:00 - 21:00</p>
+                <p>              Сб.-Вт.: 10:00 - 18:00</p>
+
             </table>
+        </div>
     </body>
 </html>
