--- a/app/views/contactPage.scala.html
+++ b/app/views/contactPage.scala.html
@@ -153,12 +153,25 @@
                 }
 
             </ul>
+            <br>
+            <br>
+            <p></p>
+            <br>
+            <br>
+
+
             <table class="wine">
-                <p>Номер телефона - 555-55-55</p>
-                <p>E-mail - DonMins@@yandex.ru</p>
-                <p>Адрес - г.Самара, ул. Любительская, д. 13, 1 этаж</p>
-                <p>Часы работы - Пн.-Пт.: 9:00 - 21:00</p>
-                <p>              Сб.-Вт.: 10:00 - 18:00</p>
+                <div class="card">
+                    <div class="card-body">
+                        <p>Номер телефона - 555-55-55</p>
+                        <p>E-mail - DonMins@@yandex.ru</p>
+                        <p>Адрес - г.Самара, ул. Любительская, д. 13, 1 этаж</p>
+                        <p>Часы работы - Пн.-Пт.: 9:00 - 21:00</p>
+                        <p>              Сб.-Вт.: 10:00 - 18:00</p>
+                    </div>
+                </div>
+
+
 
             </table>
         </div>
